--- a/blink_sass/variables.sass
+++ b/blink_sass/variables.sass
@@ -1,13 +1,17 @@
-/********************************************
- * Style Variables
- *******************************************/
+// --------------------------------------------
+// Variables from ISB
+// --------------------------------------------
 
 $screen-sm: 768px
 $screen-md: 992px
 $screen-lg: 1200px
 
-$nav-bg: #fff
+// --------------------------------------------
+// Colors
+// --------------------------------------------
+$white: #fff
 
+$nav-bg: $white
 $font-color: #000
 $link-color: #616161
 $bg-color: #F8F8F8
@@ -38,3 +42,11 @@ $text-shadow: 1px 1px 1px rgb(216, 216, 216)
 
 $box-shadow: 0px 1px 2px $border-color
 $border: 1px solid $border-color
+
+// --------------------------------------------
+// Custom variables for ISB-cgc project
+// Typography
+// --------------------------------------------
+$font_size: 14px
+
+$default_font_family: 'Proxima Nova-Regular', Arial, sans-serif
