--- a/blink_sass/style.sass
+++ b/blink_sass/style.sass
@@ -5,9 +5,6 @@
 // --------------------------------------------
 // Import external styles here
 // --------------------------------------------
-@import url("/static/css/vendor.css")
-@import url("/static/css/font-awesome.min.css")
-@import url("/static/css/jquery-ui.min.css")
 @import url("/static/css/main.css")
 
 // ----------------------------------
@@ -20,10 +17,5 @@
 // Custom scss 
 // --------------------------------------------
 
-@import basic
-@import home
-@import search
-@import cohorts
-@import visualizations
-@import users
+@import components/manifest
 
