--- a/sass/main.sass
+++ b/sass/main.sass
@@ -6,20 +6,12 @@
 
 // Core stylesheets
 //@import url("/static/css/bootstrap.min.css")
-@import url("/static/css/vendor.css")
+@import url("static/css/vendor.css")
 @import url("/static/css/font-awesome.min.css")
 @import url("/static/css/jquery-ui.min.css")
 
-// ----------------------------------
-// Import basic settings
-// ----------------------------------
 @import mixins
 @import variables
-
-// --------------------------------------------
-// Custom scss 
-// --------------------------------------------
-
 @import basic
 @import home
 @import search
