--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,16 +1,21 @@
+@charset "UTF-8";
 /********************************************
  * Main File that gets compiled
  * New Sass files should be added here to be
  * compiled.
- *******************************************/
-@import url("/static/css/vendor.css");
+ ****************************************** */
+@import url("/static/css/bootstrap.min.css");
 @import url("/static/css/font-awesome.min.css");
 @import url("/static/css/jquery-ui.min.css");
 /********************************************
+ * Style Variables
+ ****************************************** */
+/********************************************
  * Main General Styles
- *******************************************/
+ ****************************************** */
 body {
-  background-color: #F8F8F8; }
+  background-color: #F8F8F8;
+  font-family: "Proxima Nova-Regular", Arial, sans-serif; }
 
 blockquote {
   border-left-color: #006DC6;
@@ -50,7 +55,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /********************************************
  * Navbar Styles
- *******************************************/
+ ****************************************** */
 nav {
   background-color: #FFF; }
 
@@ -65,7 +70,6 @@ nav {
   margin-left: 41px; }
   .navbar-nav .search-item .input-group i {
     padding: 3px; }
-
 .navbar-nav li a:hover {
   background-color: #fff; }
 
@@ -87,11 +91,11 @@ nav {
 
 /********************************************
  * Overwriting Bootstrap
- *******************************************/
+ ****************************************** */
 .btn, .btn.active, .btn.focus, .btn-primary, .btn-primary:hover, .btn-primary:disabled, .btn-primary:active, .btn-primary:focus, .btn-success, .btn-success:hover {
   color: #000;
   border-radius: 3px; }
-  .active.btn, .active.btn-primary, .active.btn-success, .focus.btn, .focus.btn-primary, .focus.btn-success {
+  .btn.active, .active.btn-primary, .active.btn-success, .btn.focus, .focus.btn-primary, .focus.btn-success {
     background-color: #0c4fba;
     border-color: #0c4fba; }
 
@@ -114,15 +118,12 @@ nav {
 .dropdown.open > .dropdown-toggle.btn-primary {
   background-color: #0a429d;
   border-color: #0a429d; }
-
 .dropdown.dropdown-menu-right {
   text-align: right; }
-
 .dropdown .dropdown-toggle:hover {
   background-color: #EEE; }
   .dropdown .dropdown-toggle:hover.btn-primary {
     background-color: #0a429d; }
-
 .dropdown .dropdown-menu {
   border-radius: 1px;
   margin: 0px; }
@@ -141,7 +142,7 @@ nav {
   margin-left: 0px; }
   .nav-tabs > li > a, .nav-tabs > li > a > li > a, .nav-tabs > li.active > a > li > a, .nav-tabs li.active > a:focus > li > a, .nav-tabs > li.active:hover > a > li > a, .nav-tabs > li:hover > a > li > a, .nav-tabs.nav-stacked > li.active > a > li > a, .nav-tabs.nav-stacked li.active > a:focus > li > a, .nav-tabs.nav-stacked > li.active:hover > a > li > a, .nav-tabs.nav-stacked > li:hover > a > li > a {
     margin-right: 0px; }
-  .nav-tabs > li.active > a, .nav-tabs > li > a > li.active > a, .nav-tabs li.active > a:focus > li.active > a, .nav-tabs.nav-stacked > li.active > a > li.active > a, .nav-tabs.nav-stacked > li:hover > a > li.active > a, .nav-tabs li.active > a:focus, .nav-tabs > li > a li.active > a:focus, .nav-tabs.nav-stacked li.active > a:focus li.active > a:focus {
+  .nav-tabs > li.active > a, .nav-tabs > li > a > li.active > a, .nav-tabs li.active > a:focus > li.active > a, .nav-tabs.nav-stacked > li.active > a > li.active > a, .nav-tabs.nav-stacked > li:hover > a > li.active > a, .nav-tabs li.active > a:focus, .nav-tabs > li > a li.active > a:focus, .nav-tabs li.active > a:focus li.active > a:focus {
     border: none;
     border-bottom: 2px #0c4fba solid;
     font-weight: bold; }
@@ -255,27 +256,25 @@ nav {
 
 /********************************************
  * Tablesorter Style Overrides
- *******************************************/
+ ****************************************** */
 .tablesorter th {
   cursor: pointer; }
   .tablesorter th:first-child {
     cursor: auto; }
-
 .tablesorter .headerSortUp:after {
-  content: "\f077";
+  content: "";
   float: right;
   font-family: FontAwesome;
   margin-left: -20px; }
-
 .tablesorter .headerSortDown:after {
-  content: "\f078";
+  content: "";
   float: right;
   font-family: FontAwesome;
   margin-left: -20px; }
 
 /********************************************
  * Handy Classes
- *******************************************/
+ ****************************************** */
 .inline-block {
   display: inline-block;
   vertical-align: top; }
@@ -327,10 +326,9 @@ nav {
 
 /********************************************
  * Logout Modal
- *******************************************/
+ ****************************************** */
 #logout-modal h5 {
   margin-bottom: 5px; }
-
 #logout-modal table {
   display: none;
   margin-bottom: 0px; }
@@ -339,17 +337,15 @@ nav {
   #logout-modal table .selection {
     width: 75px;
     text-align: center; }
-
 #logout-modal .indent {
   padding-left: 30px; }
-
 #logout-modal label {
   font-weight: 500;
   margin-bottom: 3px; }
 
 /********************************************
  * Whole Site Widget Style
- *******************************************/
+ ****************************************** */
 a.skip-nav {
   position: absolute;
   top: -1000px;
@@ -365,15 +361,12 @@ a.skip-nav {
 
 #user-login .avatar-link:hover {
   text-decoration: none; }
-
 #user-login .login-link {
   font-size: 16px; }
-
 #user-login img {
   margin: 0px 10px;
   border-radius: 50%;
   border: 1px solid #F8F8F8; }
-
 #user-login .dropdown {
   display: inline-block;
   font-size: 16px;
@@ -387,7 +380,7 @@ a.skip-nav {
 
 /********************************************
  * Landing Page Styles
- *******************************************/
+ ****************************************** */
 #landing {
   padding-top: 15px;
   margin-top: 80px; }
@@ -417,7 +410,7 @@ a.skip-nav {
 
 /********************************************
  * Search Page Styles
- *******************************************/
+ ****************************************** */
 #search .search-left-column {
   padding-right: 0px; }
   #search .search-left-column h5 {
@@ -433,7 +426,6 @@ a.skip-nav {
       margin: 0px; }
     #search .search-left-column .search-checkbox-list li span {
       float: right; }
-
 #search .search-right-column {
   padding-left: 0px; }
   #search .search-right-column h5 {
@@ -460,15 +452,12 @@ a.skip-nav {
     display: none; }
     #search .search-right-column .results-box .save-data-modal {
       margin-top: 10px; }
-
 #search .panel {
   border-radius: 1px;
   margin-bottom: 0px; }
-
 #search .last-panel .panel-body ul {
   list-style: disc;
   margin-left: 25px; }
-
 #search .panel-heading {
   padding: 0px; }
   #search .panel-heading h5 {
@@ -478,16 +467,13 @@ a.skip-nav {
     display: block; }
   #search .panel-heading a:hover {
     text-decoration: none; }
-
 #search .result-item .result-selector {
   float: left;
   margin: 12px 10px 10px 10px;
   position: absolute; }
-
 #search .result-item .result-content {
   margin-left: 35px;
   display: inline-block; }
-
 #search .saved-search.col-md-2 {
   padding-left: 0px; }
   #search .saved-search.col-md-2 .content {
@@ -498,13 +484,10 @@ a.skip-nav {
       list-style: disc; }
       #search .saved-search.col-md-2 .content ul li {
         margin-left: 18px; }
-
 #search #save-search-modal h5 {
   margin-bottom: 5px; }
-
 #search #save-search-modal .search-table-container {
   margin: 5px 0px 0px 30px; }
-
 #search #save-search-modal table {
   display: none;
   margin-bottom: 0px; }
@@ -513,20 +496,15 @@ a.skip-nav {
   #search #save-search-modal table .selection {
     width: 75px;
     text-align: center; }
-
 #search #save-search-modal .indent {
   padding-left: 30px; }
-
 #search #save-search-modal label {
   font-weight: 500;
   margin-bottom: 3px; }
-
 #search #save-data-tab h5 {
   margin-bottom: 5px; }
-
 #search #save-data-tab .search-table-container {
   margin: 5px 0px 0px 30px; }
-
 #search #save-data-tab table {
   display: none;
   margin-bottom: 0px; }
@@ -535,14 +513,11 @@ a.skip-nav {
   #search #save-data-tab table .selection {
     width: 75px;
     text-align: center; }
-
 #search #save-data-tab .indent {
   padding-left: 30px; }
-
 #search #save-data-tab label {
   font-weight: 500;
   margin-bottom: 3px; }
-
 #search #tree-graph-clinical {
   display: block; }
   #search #tree-graph-clinical .tree-graph {
@@ -552,10 +527,8 @@ a.skip-nav {
     padding: 5px; }
     #search #tree-graph-clinical .tree-graph .graph-title {
       text-align: center; }
-
 #search #file-access a {
   text-decoration: underline; }
-
 #search #multi-categorical {
   overflow-x: scroll; }
   #search #multi-categorical svg {
@@ -588,14 +561,14 @@ a.skip-nav {
   #search #multi-categorical .dimension > rect {
     display: none; }
   #search #multi-categorical .category:hover rect {
-    fill-opacity: .3; }
+    fill-opacity: 0.3; }
   #search #multi-categorical .dimension:hover > rect {
-    fill-opacity: .3; }
+    fill-opacity: 0.3; }
   #search #multi-categorical .ribbon path {
     stroke-opacity: 0;
-    fill-opacity: .5; }
+    fill-opacity: 0.5; }
   #search #multi-categorical .ribbon path.active {
-    fill-opacity: .9; }
+    fill-opacity: 0.9; }
   #search #multi-categorical .ribbon-mouse path {
     fill-opacity: 0; }
   #search #multi-categorical .category-9 {
@@ -839,14 +812,14 @@ a.skip-nav {
     #cohort-details #multi-categorical .dimension > rect {
       display: none; }
     #cohort-details #multi-categorical .category:hover rect {
-      fill-opacity: .3; }
+      fill-opacity: 0.3; }
     #cohort-details #multi-categorical .dimension:hover > rect {
-      fill-opacity: .3; }
+      fill-opacity: 0.3; }
     #cohort-details #multi-categorical .ribbon path {
       stroke-opacity: 0;
-      fill-opacity: .5; }
+      fill-opacity: 0.5; }
     #cohort-details #multi-categorical .ribbon path.active {
-      fill-opacity: .9; }
+      fill-opacity: 0.9; }
     #cohort-details #multi-categorical .ribbon-mouse path {
       fill-opacity: 0; }
     #cohort-details #multi-categorical .category-9 {
@@ -921,7 +894,7 @@ a.skip-nav {
 
 /********************************************
  * Visualizations Styles
- *******************************************/
+ ****************************************** */
 #visualizations {
   margin-top: 115px; }
   #visualizations .data-holder {
@@ -964,7 +937,7 @@ a.skip-nav {
       overflow: hidden; }
       #visualizations .plot .plot-div .extent {
         fill: #000;
-        fill-opacity: .1;
+        fill-opacity: 0.1;
         stroke: #fff; }
       #visualizations .plot .plot-div .expected_fill.selected {
         stroke: #01307F;
@@ -1084,10 +1057,9 @@ a.skip-nav {
   margin-top: 20px; }
   #seqpeek #seqpeek-form > div {
     width: 80%; }
-
 #seqpeek .extent {
   fill: #000;
-  fill-opacity: .1; }
+  fill-opacity: 0.1; }
 
 #circviz {
   margin-top: 80px; }
@@ -1095,7 +1067,7 @@ a.skip-nav {
     stroke: black;
     text-anchor: middle;
     visibility: hidden;
-    dy: .35em;
+    dy: 0.35em;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
     font-weight: normal; }
@@ -1108,8 +1080,7 @@ a.skip-nav {
     font-size: 12px;
     font-weight: normal; }
   #circviz svg .ideogram .radial_lines {
-    stroke: null;
-    /*stroke:#444;*/
+    /*stroke:#444; */
     stroke-width: 1.5px; }
   #circviz svg .wedge .background {
     fill: none;
@@ -1173,7 +1144,6 @@ a.skip-nav {
 
 #igv i.igv-app-icon {
   background-color: transparent; }
-
 #igv .igvNavigationZoom {
   font-size: 24px; }
   #igv .igvNavigationZoom i:first-child {
@@ -1183,8 +1153,8 @@ a.skip-nav {
   position: fixed;
   top: 0px;
   left: 0px;
-  /*display : block;*/
-  /*visibility: hidden;*/
+  /*display : block; */
+  /*visibility: hidden; */
   z-index: 100000;
   font-family: inherit !important;
   font-size: 16px !important;
@@ -1275,3 +1245,5 @@ a.skip-nav {
       margin: 0px -15px 10px -15px; }
   #user-details .modal h4 {
     text-align: left; }
+
+/*# sourceMappingURL=main.css.map */
