Copied over from ui-prototyping/master

--- a/sass/basic.sass
+++ b/sass/basic.sass
@@ -372,6 +372,12 @@ a.skip-nav
     height: 1px
     width: 1px
     overflow: hidden
+    &:focus
+        top: 0px
+        left: 0px
+        height: 15px
+        width: 80px
+        z-index: 10000
 
 .navbar-brand
     height: 50px
