--- a/sass/visualizations.sass
+++ b/sass/visualizations.sass
@@ -2,7 +2,7 @@
  * Visualizations Styles
  *******************************************/
 
-#visualizations
+#visualizations, #seqpeek
     margin-top: 115px
 
     .data-holder
@@ -325,6 +325,7 @@
         content: url('/static/img/mirbase.png')
 
 #igv
+    margin-top: 60px
     i.igv-app-icon
         background-color: transparent
     .igvNavigationZoom
