--- a/blink_sass/mixins.sass
+++ b/blink_sass/mixins.sass
@@ -28,3 +28,8 @@
     -ms-transform-origin: $origin
     -webkit-transform-origin: $origin
     transform-origin: $origin
+
+@mixin vertical-align($position)
+    position: $position
+    top: 50%
+    transform: translateY(-50%)
