--- a/blink_sass/style.sass
+++ b/blink_sass/style.sass
@@ -12,7 +12,7 @@
 // ----------------------------------
 @import mixins
 @import variables
-
+@import typography
 // --------------------------------------------
 // Custom scss 
 // --------------------------------------------
