--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -16,13 +16,13 @@
             </div>
             <div class="nav navbar-right">
                 {% if user.is_authenticated %}
-                    <div id="user-login" class="navbar-form inline-block">
+                    <div id="user-login" class="navbar-form navbar-item">
                         <a class="avatar-link" href="{% url 'user_detail' user.id %}">
                             <img src="{{ user.socialaccount_set.all.0.get_avatar_url }}" width="32" height="32" alt="Avatar Link to User Details">
                         </a>
 
                         <div class="dropdown">
-                            <a role="button" class="dropdown-toggle" id="user-dropdown" data-toggle="dropdown" aria-label="User Dropdown" aria-expanded="true">
+                            <a role="button" class="dropdown-toggle navbar-item__text" id="user-dropdown" data-toggle="dropdown" aria-label="User Dropdown" aria-expanded="true">
                                 {{ user.first_name }} <i class="fa fa-caret-down"></i>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-label="user-dropdown">
@@ -30,7 +30,9 @@
                             </ul>
                         </div>
                     </div>
-                    <a type="button" class="btn btn-plain" data-toggle="collapse" data-target="#subnav" aria-expanded="false" aria-controls="subnav"><i class="fa fa-bars"></i>Menu</a>
+                    <div class="navbar-form navbar-item">
+                        <a type="button" class="navbar-item__text" data-toggle="collapse" data-target="#subnav" aria-expanded="false" aria-controls="subnav"><i class="fa fa-bars"></i>Menu</a>
+                    </div>
                 {% else %}
                     <div id="user-login" class="navbar-form inline-block">
                         <!-- same thing as /accounts/login-->
@@ -49,14 +51,14 @@
                 <ul class="sub-menu drop">
                     <li class="menu-item">
                         <strong>Recent</strong>
-                        <ul class="navitem-list">
+                        <ul class="item-list">
                             <li class="menu-item"> Workbook A </li>
                             <li class="menu-item"> Workbook B </li>
                             <li class="menu-item"> Workbook C </li>
                             <li class="menu-item"> Workbook D </li>
                             <li class="menu-item"> Workbook E </li>
-                            <li class="menu-item has-drop-down"> More
-                                <ul class="navitem-sublist drop">
+                            <li class="menu-item has-drop-down__more"> More
+                                <ul class="item-sublist drop">
                                     <li class="menu-item">Workbook F</li>
                                     <li class="menu-item">Workbook H</li>
                                     <li class="menu-item">Workbook I</li>
@@ -75,64 +77,63 @@
             <li class="menu-item has-drop-down">
                 <a>PROJECTS <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
-                    <li>
+                    <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
-                        <ul>
-                            <li> Projects A </li>
-                            <li> Projects B </li>
-                            <li> Projects C </li>
-
+                        <ul class="item-list">
+                            <li class="menu-item"> Projects A </li>
+                            <li class="menu-item"> Projects B </li>
+                            <li class="menu-item"> Projects C </li>
                         </ul>
                     </li>
-                    <li><a href="/">Saved Projectss (10)</a></li>
-                    <li><a href="/">Upload Project Data</a></li>
-                    <li><a href="/">Public Projects (2)</a></li>
+                    <li class="menu-item"><a href="/">Saved Projectss (10)</a></li>
+                    <li class="menu-item"><a href="/">Upload Project Data</a></li>
+                    <li class="menu-item"><a href="/">Public Projects (2)</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
                 <a>ANALYSES <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
-                    <li>
+                    <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
-                        <ul>
-                            <li> Analysis A </li>
-                            <li> Analysis B </li>
-                            <li> Analysis C </li>
+                        <ul class="item-list">
+                            <li class="menu-item"> Analysis A </li>
+                            <li class="menu-item"> Analysis B </li>
+                            <li class="menu-item"> Analysis C </li>
                         </ul>
                     </li>
-                    <li><a href="/">Browse All Analyses</a></li>
+                    <li class="menu-item"><a href="/">Browse All Analyses</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
                 <a>GENES <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
-                    <li>
+                    <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
-                        <ul>
-                            <li> Gene Favorite A </li>
-                            <li> Gene Favorite B </li>
-                            <li> Gene Favorite C </li>
+                        <ul class="item-list">
+                            <li class="menu-item"> Gene Favorite A </li>
+                            <li class="menu-item"> Gene Favorite B </li>
+                            <li class="menu-item"> Gene Favorite C </li>
                         </ul>
                     </li>
-                    <li><a href="/">Manage Gene Favorite (10)</a></li>
-                    <li><a href="/">Create Gene Favorite(s)</a></li>
-                    <li><a href="/">Select Genes for a New Workbook</a></li>
+                    <li class="menu-item"><a href="/">Manage Gene Favorite (10)</a></li>
+                    <li class="menu-item"><a href="/">Create Gene Favorite(s)</a></li>
+                    <li class="menu-item"><a href="/">Select Genes for a New Workbook</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
                 <a>VARIABLES <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
-                    <li>
+                    <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
-                        <ul>
-                            <li> Variables Favorite A </li>
-                            <li> Variables Favorite B </li>
-                            <li> Variables Favorite C </li>
+                        <ul class="item-list">
+                            <li class="menu-item"> Variables Favorite A </li>
+                            <li class="menu-item"> Variables Favorite B </li>
+                            <li class="menu-item"> Variables Favorite C </li>
                         </ul>
                     </li>
-                    <li><a href="/">Manage Variables Favorite (10)</a></li>
-                    <li><a href="/">Create Favorite Variable(s)</a></li>
-                    <li><a href="/">Select Variabless for a New Workbook</a></li>
+                    <li class="menu-item"><a href="/">Manage Variables Favorite (10)</a></li>
+                    <li class="menu-item"><a href="/">Create Favorite Variable(s)</a></li>
+                    <li class="menu-item"><a href="/">Select Variabless for a New Workbook</a></li>
                 </ul>
             </li>
             <li class="menu-item has-drop-down">
@@ -140,13 +141,13 @@
                 <ul class="sub-menu drop">
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
-                        <ul>
+                        <ul class="item-list">
                             <li class="menu-item"> Cohorts A </li>
                             <li class="menu-item"> Cohorts B </li>
                             <li class="menu-item"> Cohorts C </li>
                             <li class="menu-item"> Cohorts D </li>
                             <li class="menu-item"> Cohorts E </li>
-                            <li class="menu-item has-drop-down"> More
+                            <li class="menu-item has-drop-down__more"> More
                                 <ul class="drop">
                                     <li class="menu-item">Cohorts F</li>
                                     <li class="menu-item">Cohorts H</li>
