--- a/blink_sass/components/_header.sass
+++ b/blink_sass/components/_header.sass
@@ -1,6 +1,15 @@
+body
+  transition: all 0.4s ease-in
+
+.menu-open
+  padding-top: 50px
+  transition: all 0.4s ease-in
+
 nav, .site-header
   background: $nav-bg
 
+.navbar-right
+  margin-right: 0
 
 .navbar-link a
   color: $link-color
@@ -12,6 +21,7 @@ nav, .site-header
   vertical-align: middle
   padding-right: 5px
   padding-left: 5px
+
   &__text
     display: inline-block
     font-size: 16px
