--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     </script>
 
 </head>
-<body>
+<body id="body">
 <a href="#{% block link_page_name %}content{% endblock %}" class="skip-nav">Skip to main content</a>
 <div id="spinner-overlay" style="display:none;">
     <i class="fa fa-spinner fa-spin"></i>
